--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e": "npm run test",
     "test:e2e:build": "npm run build"
   },
-  "engines": {
+  "engine": {
     "node": "14.x"
   },
   "dependencies": {
