--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt": "^0.2.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^4.1.3",
+    "node-waf": "^1.0.0",
     "nodemon": "^2.0.13"
   }
 }
