--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
+    "jsonwebtoken": "^0.2.0",
     "jwks-rsa": "^2.0.5",
-    "jwt": "^0.2.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^4.1.3",
+    "node-gyp": "^8.3.0",
     "node-waf": "^1.0.0",
     "nodemon": "^2.0.13"
   }
