--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test:e2e": "npm run test",
-    "test:e2e:build": "npm run build"
+    "start": "node server.js"
   },
   "engine": {
     "node": "14.x",
-    "npm":"1.4.x"
+    "npm":"1.4.x",
+    "yarn": "1.19.1"
   },
   "dependencies": {
     "base-64": "^1.0.0",
